fix(RecentOpportunitiesSection): reduce gap in .content class and ensure proper justification for layout

--- a/src/pages/internal/RecentOpportunitiesSection/RecentOpportunitiesSection.module.css
+++ b/src/pages/internal/RecentOpportunitiesSection/RecentOpportunitiesSection.module.css
@@ -13,7 +13,8 @@
 .content {
   display: flex;
   flex-direction: row;
-  gap: 24px;
+  gap: 12px;
+  justify-content: space-between;
 
   overflow-x: auto;
 }
